# zuiki-onehandle-mascon-converter

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.vue  config.js  gamepad.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConfigList.vue  Gamepad.vue
