[package]
name = "zuiki-one-handle-mascon-converter"
version = "0.0.1"
description = "ZUIKI 電GOコントローラー キーボード変換"
authors = ["karasugawasu"]
license = "(c) 2022 karasugawasu"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["window-all"] }
enigo = { git = "https://github.com/karasugawasu/enigo", branch = "master" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
